codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__esc_interrupt_goal_paused_footer@windows.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"▌ Ask Suffice to do anything                                                    "
"                                                                                "
"  glm-5.3-flash default · /tmp/project            Goal paused (/goal resume)    "
